# SmartikoTestProject

./: CMakeLists.txt  README.md
client/: client.cpp
server/: controller.cpp  controller.h  main.cpp  model.cpp  model.h  server.cpp
